tests/baselines/reference/ifElseWithStatements5.errors.txt
tests/cases/compiler/ifElseWithStatements5.ts(16,9): error TS2322: Type '"Alice"' is not assignable to type 'undefined'.
tests/cases/compiler/ifElseWithStatements5.ts(19,9): error TS2322: Type '44' is not assignable to type 'undefined'.
tests/cases/compiler/ifElseWithStatements5.ts(23,5): error TS2322: Type '"Text:"' is not assignable to type 'undefined'.
tests/cases/compiler/ifElseWithStatements5.ts(26,1): error TS95009: Cannot access text from the object because its interface does not contain the predicate present(text). Use a non-undefined type guard.
tests/cases/compiler/ifElseWithStatements5.ts(27,1): error TS95009: Cannot access userid from the object because its interface does not contain the predicate present(userid). Use a non-undefined type guard.
tests/cases/compiler/ifElseWithStatements5.ts(28,1): error TS95009: Cannot access screenname from the object because its interface does not contain the predicate present(screenname). Use a non-undefined type guard.


==== tests/cases/compiler/ifElseWithStatements5.ts (6 errors) ====
    interface PrivateMessage {
        text?: string;
        userid?: number;
        screenname?: string;
    } constrains {
    or(and(present(userid), not(present(screenname))),
        and(not(present(userid)), present(screenname)));
    }
    
    let pm: PrivateMessage = {text: "Hi!", userid: 42};
    
    if (pm.text) {
        if (pm.userid) {
            pm.text = "Text"; //OK
            pm.userid = 43; //OK
            pm.screenname = "Alice"; //NOK
            ~~~~~~~~~~~~~
!!! error TS2322: Type '"Alice"' is not assignable to type 'undefined'.
        } else {
            pm.text = "Text"; //OK
            pm.userid = 44; //NOK
            ~~~~~~~~~
!!! error TS2322: Type '44' is not assignable to type 'undefined'.
            pm.screenname = "Alice"; //OK
        }
    } else {
        pm.text = "Text:"; //NOK
        ~~~~~~~
!!! error TS2322: Type '"Text:"' is not assignable to type 'undefined'.
    }
    
    pm.text = "Tekst"; //NOK
    ~~~~~~~
!!! error TS95009: Cannot access text from the object because its interface does not contain the predicate present(text). Use a non-undefined type guard.
    pm.userid = 46; //NOK
    ~~~~~~~~~
!!! error TS95009: Cannot access userid from the object because its interface does not contain the predicate present(userid). Use a non-undefined type guard.
    pm.screenname = "Alice"; //NOK
    ~~~~~~~~~~~~~
!!! error TS95009: Cannot access screenname from the object because its interface does not contain the predicate present(screenname). Use a non-undefined type guard.